--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <script src="./jquery-3.2.1.min.js" type="text/javascript"></script>
 
 <div class="creditcart">
-    <img  width="32px"  src="">
-    <input type="text"  class="creditcart-input" style="direction:ltr">
+    <img  width="32px"  src="bank-iran/no-img.png">
+    <input type="text"  class="creditcart-input" style="direction:ltr" placeholder="شماره کارت را وارد کنید">
 </div>
+
 <div class="shaba-number">
-<img  width="32px"  src="">
-<input type="text"  class="shaba-input"    style="direction:ltr" >
+<img  width="32px"  src="bank-iran/no-img.png">
+<input type="text"  class="shaba-input"    style="direction:ltr" placeholder="کد شبا را وارد کنید">
 </div>
 
 <script type="text/javascript">
@@ -59,6 +60,7 @@ function limit_number() {
         input.val(ConvertNumberP2E(input.val()).replace(/[^\d]+/g, ''));
     });
 }
+
 function getBankFromShaba(code){
 	
 	switch (code){
@@ -257,8 +259,8 @@ $(document).ready(function () {
         e.stopImmediatePropagation();
 
         var cardnumber = e.currentTarget.value;
-        e.currentTarget.style.display='none';
-        if (validateCard(cardnumber) === false) e.currentTarget.style.display='block';
+
+        if (validateCard(cardnumber) === false) e.currentTarget.style.borderColor='red';
         var number      = cardnumber.substring(6,-16);
         let bankData    = getBankFromCard(number)
         document.querySelector('.creditcart>img').src = "./bank-iran/"+bankData[0]+".png";
@@ -286,8 +288,8 @@ $(document).ready(function () {
                 if (shaba.length !== 24 || iso7064Mod97_10(iso13616Prepare("IR" + shaba)) !== 1) {
                     input.parent().addClass("has-error");
                     input.focus();
-                    console.log('شماره شبا وارد شده صحیح نیست<br>حتما شماره شبا خود را از <a target="_blank" href="https://parscoders.com/help/46">وب سایت بانک</a> خود دریافت نمایید.');
-                } else {
+                    input.css('border-color','red')
+                    } else {
                     input.parent().removeClass("has-error");
                 }
             },100);
