fix(index.html): meli bank picture not found in shaba number matching

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function getBankFromShaba(code){
 	
 	switch (code){
 		case '010':
-			return ['markazi' , 'بانک مرکزی' , '010']
+			return ['meli' , 'بانک مرکزی' , '010']
 			break;
 		case '011':
 			return ['sanatmadan' , 'بانک صنعت و معدن' , '011']
